--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 
 <body>
     <h1>Hello, World!</h1>
+    <img src="https://cdn.pixabay.com/photo/2025/08/09/16/51/wildlife-9764923_1280.jpg" width="200">
+    <hr>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente corrupti suscipit nisi, autem totam alias saepe
+        dicta laudantium sequi in sint nulla magni eveniet similique sit voluptas eligendi exercitationem reiciendis.
+    </p>
+    <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam sapiente quia rem deleniti? Ullam dicta ipsam
         doloremque adipisci? Dolore nam maiores officia impedit consequuntur molestias sunt fugiat aspernatur, explicabo
         est?</p>
